; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_colocation_utils.c_CheckDistributionColumnType.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_colocation_utils.c_CheckDistributionColumnType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@InvalidOid = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"cannot colocate tables %s and %s\00", align 1
@.str.1 = private unnamed_addr constant [53 x i8] c"Distribution column types don't match for %s and %s.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CheckDistributionColumnType(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %5, align 8
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %6, align 8
  %11 = load i64, i64* @InvalidOid, align 8
  store i64 %11, i64* %7, align 8
  %12 = load i64, i64* @InvalidOid, align 8
  store i64 %12, i64* %8, align 8
  %13 = load i64, i64* %3, align 8
  %14 = call %struct.TYPE_3__* @DistPartitionKey(i64 %13)
  store %struct.TYPE_3__* %14, %struct.TYPE_3__** %5, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %16 = icmp eq %struct.TYPE_3__* %15, null
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load i64, i64* @InvalidOid, align 8
  store i64 %18, i64* %7, align 8
  br label %23

19:                                               ; preds = %2
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  store i64 %22, i64* %7, align 8
  br label %23

23:                                               ; preds = %19, %17
  %24 = load i64, i64* %4, align 8
  %25 = call %struct.TYPE_3__* @DistPartitionKey(i64 %24)
  store %struct.TYPE_3__* %25, %struct.TYPE_3__** %6, align 8
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %27 = icmp eq %struct.TYPE_3__* %26, null
  br i1 %27, label %28, label %30

28:                                               ; preds = %23
  %29 = load i64, i64* @InvalidOid, align 8
  store i64 %29, i64* %8, align 8
  br label %34

30:                                               ; preds = %23
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  store i64 %33, i64* %8, align 8
  br label %34

34:                                               ; preds = %30, %28
  %35 = load i64, i64* %7, align 8
  %36 = load i64, i64* %8, align 8
  %37 = icmp ne i64 %35, %36
  br i1 %37, label %38, label %51

38:                                               ; preds = %34
  %39 = load i64, i64* %3, align 8
  %40 = call i8* @get_rel_name(i64 %39)
  store i8* %40, i8** %9, align 8
  %41 = load i64, i64* %4, align 8
  %42 = call i8* @get_rel_name(i64 %41)
  store i8* %42, i8** %10, align 8
  %43 = load i32, i32* @ERROR, align 4
  %44 = load i8*, i8** %9, align 8
  %45 = load i8*, i8** %10, align 8
  %46 = call i32 @errmsg(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i8* %44, i8* %45)
  %47 = load i8*, i8** %9, align 8
  %48 = load i8*, i8** %10, align 8
  %49 = call i32 @errdetail(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.1, i64 0, i64 0), i8* %47, i8* %48)
  %50 = call i32 @ereport(i32 %43, i32 %49)
  br label %51

51:                                               ; preds = %38, %34
  ret void
}

declare dso_local %struct.TYPE_3__* @DistPartitionKey(i64) #1

declare dso_local i8* @get_rel_name(i64) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*, i8*, i8*) #1

declare dso_local i32 @errdetail(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
